# wxman

./: Cargo.toml  README.md
.github/workflows/: release.yml
homebrew/: SETUP.md  update-wxman-formula.yml  wxman.rb
src/: app.rs  config.rs  main.rs
src/api/: geocoding.rs  geolocation.rs  mod.rs  weather.rs
src/models/: location.rs  mod.rs  weather.rs
src/ui/: chart.rs  current.rs  daily.rs  hourly.rs  icons.rs  mod.rs  render.rs
