[package]
name = "wxman"
version = "0.1.0"
edition = "2021"
description = "A terminal-based weather application"
authors = ["wxman"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
anyhow = "1"
